fix: dark mode only

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -8,25 +8,23 @@
   --error: rgb(239 68 68);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html {
+  color-scheme: dark;
+}
 
-  html,
-  body {
-    font-family: "Bruno Ace", cursive;
-    color: var(--blue);
-    overflow: hidden;
-    background: var(--grey);
-    margin: 0;
-    height: 100%;
-    word-spacing: 3px;
-  }
+html,
+body {
+  font-family: "Bruno Ace", cursive;
+  color: var(--blue);
+  overflow: hidden;
+  background: var(--grey);
+  margin: 0;
+  height: 100%;
+  word-spacing: 3px;
+}
 
-  *::selection {
-    background-color: var(--blue);
-  }
+*::selection {
+  background-color: var(--blue);
 }
 
 input::placeholder,
